[gd_scene load_steps=5 format=3 uid="uid://cjwahpm5wkav5"]

[ext_resource type="Script" uid="uid://6ab82xhphtib" path="res://scripts/gd/ability_card_choice.gd" id="1_omyl3"]
[ext_resource type="Texture2D" uid="uid://ymbytft3nu0i" path="res://assets/sprite/Ability Cards/Mile Punch.png" id="2_qe5h1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oyltb"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ww6rq"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Ability_Card_choice" type="Control"]
z_index = -1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_omyl3")

[node name="Card" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -524.0
offset_top = -323.0
offset_right = -326.0
offset_bottom = -42.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(1.15, 1.15)
texture = ExtResource("2_qe5h1")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -284.0
offset_top = -309.0
offset_right = 370.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 15

[node name="Grid 1_2" type="GridContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
columns = 3

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/Grid 1_2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../../../../Next_Previouse_Page")
theme_override_font_sizes/font_size = 24

[node name="Button2" type="Button" parent="PanelContainer/MarginContainer/Grid 1_2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24

[node name="Button3" type="Button" parent="PanelContainer/MarginContainer/Grid 1_2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_right = NodePath("../../../../Next_Previouse_Page")
theme_override_font_sizes/font_size = 24

[node name="Button4" type="Button" parent="PanelContainer/MarginContainer/Grid 1_2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../../../../Next_Previouse_Page")
theme_override_font_sizes/font_size = 24

[node name="Button5" type="Button" parent="PanelContainer/MarginContainer/Grid 1_2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24

[node name="Button6" type="Button" parent="PanelContainer/MarginContainer/Grid 1_2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_right = NodePath("../../../../Next_Previouse_Page")
theme_override_font_sizes/font_size = 24

[node name="Button7" type="Button" parent="PanelContainer/MarginContainer/Grid 1_2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../../../../Next_Previouse_Page")
theme_override_font_sizes/font_size = 24

[node name="Button8" type="Button" parent="PanelContainer/MarginContainer/Grid 1_2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24

[node name="Button9" type="Button" parent="PanelContainer/MarginContainer/Grid 1_2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_right = NodePath("../../../../Next_Previouse_Page")
theme_override_font_sizes/font_size = 24

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/Grid 1_2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "1/2
"
horizontal_alignment = 1

[node name="Grid 2_2" type="GridContainer" parent="PanelContainer/MarginContainer"]
visible = false
layout_mode = 2
columns = 3

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/Grid 2_2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../../../../Next_Previouse_Page")
theme_override_font_sizes/font_size = 24

[node name="Button2" type="Button" parent="PanelContainer/MarginContainer/Grid 2_2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24

[node name="Button3" type="Button" parent="PanelContainer/MarginContainer/Grid 2_2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_right = NodePath("../../../../Next_Previouse_Page")
focus_next = NodePath("../../Grid 1_2/Button")
theme_override_font_sizes/font_size = 24

[node name="Button4" type="Button" parent="PanelContainer/MarginContainer/Grid 2_2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../../../../Next_Previouse_Page")
theme_override_font_sizes/font_size = 24

[node name="Button5" type="Button" parent="PanelContainer/MarginContainer/Grid 2_2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24

[node name="Button6" type="Button" parent="PanelContainer/MarginContainer/Grid 2_2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_right = NodePath("../../../../Next_Previouse_Page")
focus_next = NodePath("../Button")
theme_override_font_sizes/font_size = 24

[node name="Button7" type="Button" parent="PanelContainer/MarginContainer/Grid 2_2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_left = NodePath("../../../../Next_Previouse_Page")
theme_override_font_sizes/font_size = 24

[node name="Button8" type="Button" parent="PanelContainer/MarginContainer/Grid 2_2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24

[node name="Button9" type="Button" parent="PanelContainer/MarginContainer/Grid 2_2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_neighbor_right = NodePath("../../../../Next_Previouse_Page")
theme_override_font_sizes/font_size = 24

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/Grid 2_2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "2/2
"
horizontal_alignment = 1

[node name="Next_Previouse_Page" type="Button" parent="."]
layout_mode = 0
offset_left = 1220.0
offset_top = 639.0
offset_right = 1260.0
offset_bottom = 679.0
theme_override_styles/focus = SubResource("StyleBoxFlat_oyltb")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_oyltb")
theme_override_styles/disabled = SubResource("StyleBoxFlat_oyltb")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_oyltb")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_oyltb")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_oyltb")
theme_override_styles/hover = SubResource("StyleBoxFlat_ww6rq")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_oyltb")
theme_override_styles/pressed = SubResource("StyleBoxFlat_oyltb")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_oyltb")
theme_override_styles/normal = SubResource("StyleBoxFlat_oyltb")

[connection signal="focus_entered" from="PanelContainer/MarginContainer/Grid 1_2/Button" to="." method="focused"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Grid 1_2/Button" to="." method="pressed"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/Grid 1_2/Button2" to="." method="focused"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Grid 1_2/Button2" to="." method="pressed"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/Grid 1_2/Button3" to="." method="focused"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Grid 1_2/Button3" to="." method="pressed"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/Grid 1_2/Button4" to="." method="focused"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Grid 1_2/Button4" to="." method="pressed"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/Grid 1_2/Button5" to="." method="focused"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Grid 1_2/Button5" to="." method="pressed"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/Grid 1_2/Button6" to="." method="focused"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Grid 1_2/Button6" to="." method="pressed"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/Grid 1_2/Button7" to="." method="focused"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Grid 1_2/Button7" to="." method="pressed"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/Grid 1_2/Button8" to="." method="focused"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Grid 1_2/Button8" to="." method="pressed"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/Grid 1_2/Button9" to="." method="focused"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Grid 1_2/Button9" to="." method="pressed"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/Grid 2_2/Button" to="." method="focused"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Grid 2_2/Button" to="." method="pressed"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/Grid 2_2/Button2" to="." method="focused"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Grid 2_2/Button2" to="." method="pressed"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/Grid 2_2/Button3" to="." method="focused"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Grid 2_2/Button3" to="." method="pressed"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/Grid 2_2/Button4" to="." method="focused"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Grid 2_2/Button4" to="." method="pressed"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/Grid 2_2/Button5" to="." method="focused"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Grid 2_2/Button5" to="." method="pressed"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/Grid 2_2/Button6" to="." method="focused"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Grid 2_2/Button6" to="." method="pressed"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/Grid 2_2/Button7" to="." method="focused"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Grid 2_2/Button7" to="." method="pressed"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/Grid 2_2/Button8" to="." method="focused"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Grid 2_2/Button8" to="." method="pressed"]
[connection signal="focus_entered" from="PanelContainer/MarginContainer/Grid 2_2/Button9" to="." method="focused"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Grid 2_2/Button9" to="." method="pressed"]
[connection signal="focus_entered" from="Next_Previouse_Page" to="." method="next_previouse_page_focus"]
